--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "homepage": "https://gitmixu.github.io/portfolio",
-  "name": "front",
+  "name": "portolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -33,6 +33,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "json-server": "^1.0.0-alpha.23",
     "vite": "^5.0.8"
   }
