--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@iconscout/react-unicons": "^2.0.2",
     "axios": "^1.6.7",
+    "firebase": "^10.12.0",
     "framer-motion": "^11.0.3",
     "lottie": "^0.0.1",
     "lottie-react": "^2.4.0",
